--- a/html/browser/common.css
+++ b/html/browser/common.css
@@ -8,6 +8,22 @@ body
 	line-height: 170%;
 }
 
+/** Remove conditionals with 516*/
+@supports (not (-webkit-hyphens: none)) and (not (-moz-appearance: none)) {
+	body
+	{
+		font-size: 0.65em;
+	}
+}
+
+/** Remove with 516 */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+	body
+	{
+		font-size: 12px;
+	}
+}
+
 hr
 {
 	background-color: #40628a;
