--- a/html/css/pai_cart.css
+++ b/html/css/pai_cart.css
@@ -7,6 +7,7 @@ body {
 	background-repeat:repeat-x;
 	background-color:#272727;
 	background-position:center top;
+	line-height: normal;
 }
 
 table {
@@ -49,19 +50,10 @@ tr.d2 td {
 }
 
 td.button {
-	border: 1px solid #161616;
-	background-color: #40628a;
-}
-
-td.button {
-	border: 1px solid #161616;
-	background-color: #40628a;
 	text-align: center;
 }
 
 td.button_red {
-	border: 1px solid #161616;
-	background-color: #B04040;
 	text-align: center;
 }
 
@@ -97,6 +89,10 @@ a {
 a.button {
 	color:white;
 	text-decoration: none;
+}
+
+a:hover {
+	color: #777;
 }
 
 h2 {
